Fix header height so page doesn't jump on header load

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,9 +19,13 @@ h3 {
     text-align: center;
 }
 
+header {
+    height: 122px;
+    margin: 30px 0;
+}
 header img {
     display: block;
-    margin: 30px auto;
+    margin: 0 auto;
 }
 #content img {
     width: 80%;
